Fix topic vote spacing

--- a/client/stylesheets/components.import.less
+++ b/client/stylesheets/components.import.less
@@ -57,11 +57,11 @@
 }
 .btn.btn-pro { 
   background-color: @color-pro; 
-  margin-right: 7.5px;
+  margin-right: 4px;
 }
 .btn.btn-con { 
   background-color: @color-con;
-  margin-left: 7.5px;
+  margin-left: 4px;
 }
 .btn-default, 
 .btn-default.disabled, 
